# tringa

./: README.md  pyproject.toml
etc/: design.md
src/: cli.py  tyto.py
src/tringa/: artifact.py  cli.py  db.py  fetch.py  gh.py  github.py  log.py  models.py  msg.py  queries.py  repl.py  rich.py  scoped_db.py  utils.py
src/tringa/annotations/: flaky.py
src/tringa/cli/: __init__.py  cli.py  globals.py  output.py  pr.py  repo.py  run.py
src/tringa/cli/pr/: cli.py
src/tringa/cli/repo/: __init__.py  cli.py  flakes.py  show.py  summary.py
src/tringa/cli/reports/: __init__.py  failed_tests.py  failedtests.py  flakes.py  flaky_tests.py  slowtests.py
src/tringa/cli/run/: cli.py  results.py  show.py
src/tringa/tui/: layout.tcss  tui.py
src/tyto/: __init__.py  app.py  cli.py  github.py  utils.py
tests/: test_cli.py  test_junit_parser.py  test_utils.py
