[project]
name = "tyto"
version = "0.1.0"
description = "A junit.xml tool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=8.26.0",
    "junitparser>=3.1.2",
    "duckdb>=1.0.0",
]

[project.scripts]
tyto = "cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pdbpp>=0.10.3",
    "pytest>=8.3.2",
]

[tool.pytest.ini_options]
addopts = "--junitxml=junit.xml"
testpaths = [
    "tests",
]
