[project]
name = "tringa"
version = "0.1.0"
description = "A tool for querying test output across multiple CI builds on GitHub"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=8.26.0",
    "junitparser>=3.1.2",
    "duckdb>=1.0.0",
    "rich>=13.8.0",
    "typer>=0.12.5",
    "xdg-base-dirs>=6.0.1",
    "pytest>=8.3.2",
    "litecli>=1.11.0",
    "humanize>=4.10.0",
]

[project.scripts]
tringa = "tringa.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
reportIncompatibleMethodOverride = true

[tool.uv]
dev-dependencies = [
    "pdbpp>=0.10.3",
    "build>=1.2.1",
]
